# C-Learning

./: C_CHEATSHEET.md  README.md  SETUP.md
projects/01-hello-math-cli/: LESSON.md  PROMPT.md  hello-math-cli.c  hello-math-cli.cpp  hello_world  simple_calculator  simple_calculator_cpp
projects/02-number-guessing-game/: LESSON.md  PROMPT.md  number-guesser  number-guesser-c.c  number-guesser-cpp.cpp
projects/03-unit-converter/: LESSON.md  PROMPT.md  unit-converter  unit-converter.c
projects/04-tic-tac-toe/: LESSON.md  PROMPT.md  tic-tac-toe  tic-tac-toe.c
projects/05-to-do-list/: LESSON.md  PROMPT.md  to-do-list  to-do-list.c
projects/06-text-stats/: LESSON.md  PROMPT.md  test.txt  text-stats  text-stats.c
projects/07-contact-book/: LESSON.md  PROMPT.md  contact-book  contact-book.c
projects/08-hangman/: LESSON.md  PROMPT.md  hangman  hangman.c  word_choices.txt
projects/09-dynamic-array-library/: LESSON.md  PROMPT.md  dynamic-array  dynamic-array.c  int_array.c  int_array.h
projects/10-student-gradebook/: LESSON.md  PROMPT.md  assignment.c  assignment.h  gradebook.c  gradebook.h  student-gradebook.c  student.c  student.h
projects/11-mini-shell/: LESSON.md  PROMPT.md
projects/12-memory-game/: LESSON.md  PROMPT.md
projects/12a-cmake-c-library/: CMakeLists.txt  LESSON.md  PROMPT.md  main.c  stats.c  stats.h
projects/13-opengl-window-and-triangle/: CMakeLists.txt  LESSON.md  PROMPT.md  opengl-window.c
projects/13-opengl-window-and-triangle/resources/: resources.md
projects/14-opengl-textured-sprite/: LESSON.md  PROMPT.md
(+12 files in other folders)
